--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node index.js"
   },
   "engines": {
-     "node": ">=18.0.0 <19.0.0"
+     "node": ">=14.20.1"
   },
   "author": "",
   "license": "ISC",
